clusters/on-prem-cluster/apps/media/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ingress-stripprefix
  namespace: media

spec:
  stripPrefix:
    prefixes:
      - /qbittorrent/
      - /sonarr/
      - /radarr/
      - /lidarr/
      - /prowlarr/
