clusters/on-prem-cluster/apps/media/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: media-ingress
    namespace: media
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
        traefik.ingress.kubernetes.io/router.middlewares: media-ingress-stripprefix@kubernetescrd
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:fB4pxLoX31MZQ1X0vMm/9r1mSr+tqw==,iv:C364X7cOaGIhhkr6g9sbAl91EiQi9DYr54q/PL5C560=,tag:y1ErH1dDDr+yJPyPHY4VMw==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:6A/1qnaIgrFsxQqRt3N+FJg2DaJ1Sg==,iv:LFKH3ZYm0p5rytXM+htcXgVXS1elAJCXp2b7kDgJRh4=,tag:TTwsiBd1NwOKpDo7V3EV+w==,type:str]
          http:
            paths:
                - path: /qbittorrent/
                  pathType: Prefix
                  backend:
                    service:
                        name: qbittorrent-service
                        port:
                            number: 8080
        - host: ENC[AES256_GCM,data:a93OsXNpSnM94fx6HEXqqZ78CoUyZg==,iv:8+dIBTzvT0eKWmOt5njRMnHBBHoSYoJRjsMKAJLYCG0=,tag:Tck+4LR8AG73lJOfnQmpEw==,type:str]
          http:
            paths:
                - path: /sonarr/
                  pathType: Prefix
                  backend:
                    service:
                        name: sonarr-service
                        port:
                            number: 8989
        - host: ENC[AES256_GCM,data:F8x9F0ABQWFjhDrLiNjKKBCbS36mhg==,iv:dTxd5/39h48+NfRFdQdDw3qoqq4iufm7vkf7ChFyI/0=,tag:IwRmNQFgMNwoYkB7K3jQKA==,type:str]
          http:
            paths:
                - path: /radarr/
                  pathType: Prefix
                  backend:
                    service:
                        name: radarr-service
                        port:
                            number: 7878
        - host: ENC[AES256_GCM,data:1ZMGOk2BlmBOsJLzzHb4lY3uofLQwQ==,iv:2jarel5w8XeaL42KlQJszI1Z5FlIcJyaqAQaBAydWD8=,tag:fktpknsIriqr9WF4C15Heg==,type:str]
          http:
            paths:
                - path: /lidarr/
                  pathType: Prefix
                  backend:
                    service:
                        name: lidarr-service
                        port:
                            number: 8686
        - host: ENC[AES256_GCM,data:DgmtqKXudfqz4RgcVWMB0Cm6zGHEJg==,iv:aJAnTDeh1Lbqe9zeptTMKie1BRMfm6GC2SzaBV+4U3s=,tag:KVW7Pw9kwItNcMoTUiz6Fw==,type:str]
          http:
            paths:
                - path: /prowlarr/
                  pathType: Prefix
                  backend:
                    service:
                        name: prowlarr-service
                        port:
                            number: 9696
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmRllKYnAwU0Q0UFh6L3RY
[...]
            TMrkRNqpwnXqapQfAmH8u9ZUtiEd99fDVCh4qf9X1ynr/xD7OmpkdA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2022-12-28T12:09:51Z"
    mac: ENC[AES256_GCM,data:QRVaB4jPECfNaZlbmQjBNIBK5qa/GduZpYsEgNuNTMC6qHDK5ggQyPejP4V7zK6QUuyTj7XVZ+jqH3JX/ET66qYWGhQ77N/PnOH+NgwGpOIhSgCYKJTm0fI9/yEaYY3Wb0VZtDV7tCiZoYdQmhFzD6IYVmRsV3ZxOGu00/T6ruQ=,iv:uRFUP8HypKaBCSTaF2KxnVE0BLBb370DjS64ouslVoI=,tag:78wppDse0JufHX+ywhK25w==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalIPs)$
    version: 3.7.3
